--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.10.2",
